@@ -3,6 +3,7 @@
 * Switched to -O2 and enabled OpenMP.
 * Removed Server autostart and added exit on error to ActionSender.
 * Improved data initializing on connecting.
+* Replaced Qt networking by nanomsg.
 
 SphereSim 3.0.3:
 * Removed custom Array class, replaced by std::vector.
